Criação de novas seções

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <div class="home__perfil">
                     <div class="home__image">
-                        <img src="/assets/img/home-perfil.jpg" alt="imagem" class="home__img">
+                        <img src="/assets/img/Vana Studio - Close-up portrait of   in a beautiful painting, soft pastel col… 1.png" alt="imagem" class="home__img">
                         <div class="home__shadow"></div>
 
                         <img src="/assets/img/curved-arrow.svg" alt="" class="home__arrow">
@@ -119,12 +119,116 @@
 
          <!--==================== ABOUT ====================-->
          <section class="about section" id="sobre">
-            
+            <div class="about__container container grid">
+                <h2 class="section__title-1">
+                    <span>Sobre Mim.</span>
+                </h2>
+
+                <div class="about__perfil">
+                    <div class="about__image">
+                        <img src="/assets/img/Vana Studio - Close-up portrait of   in a beautiful painting, soft pastel col… 3.png" alt="imagem" class="about__img">
+
+                        <div class="about__shadow"></div>
+
+                        <div class="geometric-box"></div>
+                        <img src="/assets/img/random-lines.svg" alt="" class="about__line">
+                        <div class="about__box"></div>
+                    </div>
+                </div>
+
+                <div class="about__info">
+                    <p class="about__description">
+                        Passionate about creating <b>Web Pages</b> with 
+                        <b>UI/UX User Interface</b>, I have years of 
+                        experience and many clients are happy with 
+                        the projects carried out.
+                    </p>
+
+                    <ul class="about__list">
+                        <li class="about__item">
+                            <b>My Skills Are:</b> HTML, CSS, JavaScript, 
+                            React, Git & GitHub, Bootstrap, Flutter & 
+                            Figma.
+                        </li>
+                    </ul>
+
+                    <div class="about__buttons">
+                        <a href="#contato" class="button">
+                            <i class="ri-send-plane-line"></i> Contate-me
+                        </a>
+
+                        <a href="https://www.linkedin.com/in/notedsilva/" target="_blank" class="button__ghost">
+                            <i class="ri-linkedin-box-line"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
          </section>
 
          <!--==================== SERVICES ====================-->
          <section class="services section">
-            
+            <h2 class="section__title-2">
+                <span>Serviços.</span>
+            </h2>
+
+            <div class="services__container container grid">
+                <article class="services__card">
+                    <div class="services__border"></div>
+
+                    <div class="services__content">
+                        <div class="services__icon">
+                            <div class="services__box"></div>
+                            <i class="ri-layout-4-line"></i>
+                        </div>
+
+                        <h2 class="services__title">Web Design</h2>
+
+                        <p class="services__description">
+                            Beautiful and elegant designs with 
+                            interfaces that are intuitive, efficient 
+                            and pleasant  to use for the user.
+                        </p>
+                    </div>
+                </article>
+
+                <article class="services__card">
+                    <div class="services__border"></div>
+
+                    <div class="services__content">
+                        <div class="services__icon">
+                            <div class="services__box"></div>
+                            <i class="ri-code-box-line"></i>
+                        </div>
+
+                        <h2 class="services__title">Development</h2>
+
+                        <p class="services__description">
+                            Custom web development tailored to your 
+                            specifications, designed to provide a 
+                            flawless user experience.
+                        </p>
+                    </div>
+                </article>
+
+                <article class="services__card">
+                    <div class="services__border"></div>
+
+                    <div class="services__content">
+                        <div class="services__icon">
+                            <div class="services__box"></div>
+                            <i class="ri-smartphone-line"></i>
+                        </div>
+
+                        <h2 class="services__title">Mobile App</h2>
+
+                        <p class="services__description">
+                            Design and transform website projects 
+                            into mobile apps to provide a seamless
+                            user experience.
+                        </p>
+                    </div>
+                </article>
+            </div>
          </section>
 
          <!--==================== PROJECTS ====================-->
