--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+      <!--=============== ICON ===============-->
+      <link rel="icon" href="/assets/img/account-pin-circle-fill.svg" type="image/x-icon">
+
       <!--=============== FAVICON ===============-->
       <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
