--- a/index.html
+++ b/index.html
@@ -236,7 +236,143 @@
 
          <!--==================== PROJECTS ====================-->
          <section class="projects section" id="projetos">
-            
+            <h2 class="section__title-1">
+                <span>Projetos.</span>
+            </h2>
+
+            <div class="projects__container container grid">
+                <article class="projects__card">
+                    <div class="projects__image">
+                        <img src="/assets/img/project-1.jpg" alt="imagem" class="projects__img">
+
+                        <a href="#" class="projects__button button">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__subtitle">Website</h3>
+                        <h2 class="projects__title">Site de Carros</h2>
+
+                        <p class="projects__description">
+                            Project that you carry out in the design 
+                            and structure of the layout, showing the 
+                            design at the client's request.
+                        </p>
+                    </div>
+
+                    <div class="projects__buttons">
+                        <a href="#" target="_blank" class="projects__link">
+                            <i class="ri-github-line"></i> 
+                            Visualizar
+                        </a>
+
+                        <a href="#" target="_blank" class="projects__link">
+                            <i class="ri-dribbble-line"></i>
+                            Visualizar
+                        </a>
+                    </div>
+                </article>
+
+                <article class="projects__card">
+                    <div class="projects__image">
+                        <img src="/assets/img/project-2.jpg" alt="imagem" class="projects__img">
+
+                        <a href="#" class="projects__button button">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__subtitle">App</h3>
+                        <h2 class="projects__title">Quiz App</h2>
+
+                        <p class="projects__description">
+                            Project that you carry out in the design 
+                            and structure of the layout, showing the 
+                            design at the client's request.
+                        </p>
+                    </div>
+
+                    <div class="projects__buttons">
+                        <a href="#" target="_blank" class="projects__link">
+                            <i class="ri-github-line"></i> 
+                            Visualizar
+                        </a>
+
+                        <a href="#" target="_blank" class="projects__link">
+                            <i class="ri-dribbble-line"></i>
+                            Visualizar
+                        </a>
+                    </div>
+                </article>
+
+                <article class="projects__card">
+                    <div class="projects__image">
+                        <img src="/assets/img/project-3.jpg" alt="imagem" class="projects__img">
+
+                        <a href="#" class="projects__button button">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__subtitle">Website</h3>
+                        <h2 class="projects__title">Site Manicure</h2>
+
+                        <p class="projects__description">
+                            Project that you carry out in the design 
+                            and structure of the layout, showing the 
+                            design at the client's request.
+                        </p>
+                    </div>
+
+                    <div class="projects__buttons">
+                        <a href="#" target="_blank" class="projects__link">
+                            <i class="ri-github-line"></i> 
+                            Visualizar
+                        </a>
+
+                        <a href="#" target="_blank" class="projects__link">
+                            <i class="ri-dribbble-line"></i>
+                            Visualizar
+                        </a>
+                    </div>
+                </article>
+
+                <article class="projects__card">
+                    <div class="projects__image">
+                        <img src="/assets/img/project-1.jpg" alt="imagem" class="projects__img">
+
+                        <a href="#" class="projects__button button">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__subtitle">App</h3>
+                        <h2 class="projects__title">IMC App</h2>
+
+                        <p class="projects__description">
+                            Project that you carry out in the design 
+                            and structure of the layout, showing the 
+                            design at the client's request.
+                        </p>
+                    </div>
+
+                    <div class="projects__buttons">
+                        <a href="#" target="_blank" class="projects__link">
+                            <i class="ri-github-line"></i> 
+                            Visualizar
+                        </a>
+
+                        <a href="#" target="_blank" class="projects__link">
+                            <i class="ri-dribbble-line"></i>
+                            Visualizar
+                        </a>
+                    </div>
+                </article>
+            </div>
          </section>
 
          <!--==================== CONTACT ====================-->
