Criação da seção contato

--- a/index.html
+++ b/index.html
@@ -377,7 +377,89 @@
 
          <!--==================== CONTACT ====================-->
          <section class="contact section" id="contato">
-            
+            <div class="contact__container grid">
+                <div class="contact__data">
+                    <h2 class="section__title-2">
+                        <span>Contate-me.</span>
+                    </h2>
+
+                    <p class="contact__description-1">
+                        I will read all emails. Send me any 
+                        message you want and I'll get back to you.
+                    </p>
+
+                    <p class="contact__description-2">
+                        I need your <b>Name</b> and <b>Email Address</b>, but 
+                        you won't receive anything other than your reply.
+                    </p>
+
+                    <div class="geometric-box"></div>
+                </div>
+
+                <div class="contact__mail">
+                    <h2 class="contact__title">
+                        Me mande uma mensagem!
+                    </h2>
+
+                    <form action="" class="contact__form" id="contact-form">
+                        <div class="contact__group">
+                            <div class="contact__box">
+                                <input type="text" name="user_name" class="contact__input" id="name" required placeholder="Primeiro Nome">
+                                <label for="name" class="contact__label">Primeiro Nome</label>
+                            </div>
+
+                            <div class="contact__box">
+                                <input type="email" name="user_email" class="contact__input" id="email" required placeholder="Endereço de Email">
+                                <label for="email" class="contact__label">Endereço de Email</label>
+                            </div>
+
+                            <div class="contact__box">
+                                <input type="text" name="user_subject" class="contact__input" id="subject" required placeholder="Assunto">
+                                <label for="subject" class="contact__label">Assunto</label>
+                            </div>
+
+                            <div class="contact__box contact__area">
+                                <textarea name="user_message" id="message" class="contact__input" required placeholder="Mensagem"></textarea>
+                                <label for="message" class="contact__label">Mensagem</label>
+                            </div>
+                        </div>
+
+                        <button type="submit" class="contact__button button">
+                            <i class="ri-send-plane-line"></i> Enviar Mensagem
+                        </button>
+                    </form>
+                </div>
+
+                <div class="contact__social">
+                    <img src="/assets/img/curved-arrow.svg" alt="" class="contact__social-arrow">
+
+                    <div class="contact__social-data">
+                        <div>
+                            <p class="contact__social-description-1">
+                                Ou
+                            </p>
+
+                            <p class="contact__social-description-2">
+                                Escreva-me nas minhas redes sociais
+                            </p>
+                        </div>
+
+                        <div class="contact__social-links">
+                            <a href="https://www.linkedin.com/in/notedsilva/" target="_blank" class="contact__social-link">
+                                <i class="ri-linkedin-box-line"></i>
+                            </a>
+
+                            <a href="" target="_blank" class="contact__social-link">
+                                <i class="ri-twitter-line"></i>
+                            </a>
+
+                            <a href="https://www.instagram.com/blonded__ocean/" target="_blank" class="contact__social-link">
+                                <i class="ri-instagram-line"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
          </section>
       </main>
 
