Alteração de idioma

--- a/index.html
+++ b/index.html
@@ -384,13 +384,13 @@
                     </h2>
 
                     <p class="contact__description-1">
-                        I will read all emails. Send me any 
-                        message you want and I'll get back to you.
+                        Lerei todos os e-mails. Envie-me qualquer mensagem
+                        que entrarei em contato com você.
                     </p>
 
                     <p class="contact__description-2">
-                        I need your <b>Name</b> and <b>Email Address</b>, but 
-                        you won't receive anything other than your reply.
+                        Preciso do seu <b>Nome</b> e <b>Endereço de E-mail</b>,
+                        mas você não receberá nada além da sua resposta.
                     </p>
 
                     <div class="geometric-box"></div>
