Criação de Breakpoints

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#contato" class="nav__link">Contato</a>
+                        <a href="#contato" class="nav__link nav__link-button">Contato</a>
                     </li>
                 </ul>
 
@@ -57,6 +57,10 @@
             </div>
     
             <div class="nav__buttons">
+
+                <!-- Botão de Tema -->
+                <i class="ri-moon-line change-theme" id="theme-button"></i>
+
                 <!-- Botão de alternar -->
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="ri-menu-4-line"></i>
@@ -112,7 +116,7 @@
                             <i class="ri-arrow-down-s-line"></i>
                         </div>
 
-                        <span class="home__scroll-text">Scroll Down</span>
+                        <span class="home__scroll-text">Rolar para baixo</span>
                     </a>
                 </div>
 
@@ -494,7 +498,7 @@
         <i class="ri-arrow-up-s-line"></i>
       </a>
 
-      <!--=============== SCROLLREVEAL ===============-->
+      <!--=============== ROLAGEM ===============-->
       <script src=""></script>
       
       <!--=============== EMAIL JS ===============-->
