--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">
+            <a href="/index.html" class="nav__logo">
                 <span class="nav__logo-circle">G</span>
                 <span class="nav__logo-name">Gabriel Silva.</span>
             </a>
@@ -98,7 +98,7 @@
                             <i class="ri-github-line"></i>
                         </a>
 
-                        <a href="" target="_blank" class="home__social-link">
+                        <a href="/assets/img/Curriculo_Ti.pdf" target="_blank" class="home__social-link" onclick="return confirmDownload()">
                             <i class="ri-file-download-line"></i>
                         </a>
                     </div>
@@ -124,7 +124,7 @@
             </div>
          </section>
 
-         <!--==================== ABOUT ====================-->
+         <!--==================== SOBRE MIM ====================-->
          <section class="about section" id="sobre">
             <div class="about__container container grid">
                 <h2 class="section__title-1">
@@ -172,7 +172,7 @@
             </div>
          </section>
 
-         <!--==================== SERVICES ====================-->
+         <!--==================== SERVICOS ====================-->
          <section class="services section">
             <h2 class="section__title-2">
                 <span>Serviços.</span>
@@ -238,7 +238,7 @@
             </div>
          </section>
 
-         <!--==================== PROJECTS ====================-->
+         <!--==================== PROJETOS ====================-->
          <section class="projects section" id="projetos">
             <h2 class="section__title-1">
                 <span>Projetos.</span>
@@ -379,7 +379,7 @@
             </div>
          </section>
 
-         <!--==================== CONTACT ====================-->
+         <!--==================== CONTATO ====================-->
          <section class="contact section" id="contato">
             <div class="contact__container grid">
                 <div class="contact__data">
@@ -488,7 +488,7 @@
 
             <span class="footer__copy">
                 &#169; Todos os direitos reservados por 
-                <a href="#">NotedSilva.</a>
+                <a href="https://github.com/NotedSilva" target="_blank">NotedSilva.</a>
             </span>
          </div>
       </footer>
@@ -499,7 +499,7 @@
       </a>
 
       <!--=============== ROLAGEM ===============-->
-      <script src=""></script>
+      <script src="/assets/js/scrollreveal.min.js"></script>
       
       <!--=============== EMAIL JS ===============-->
       <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
