Tradução da página para ingles

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
             <select id="languageSelector">
                 <option value="pt-br">Português (BR)</option>
-                <option value="en">English</option>
-                <option value="es">Español</option>
+                <option value="en">English (EUA)</option>
+                <option value="es">Español (ES)</option>
             </select>
         </nav>
       </header>
@@ -266,12 +266,12 @@
                     </div>
 
                     <div class="projects__buttons">
-                        <a href="#" target="_blank" class="projects__link">
+                        <a href="#" target="_blank" class="projects__link" id="projects__link1">
                             <i class="ri-github-line"></i> 
                             Visualizar
                         </a>
 
-                        <a href="#" target="_blank" class="projects__link">
+                        <a href="#" target="_blank" class="projects__link" id="projects__link2">
                             <i class="ri-dribbble-line"></i>
                             Visualizar
                         </a>
@@ -288,23 +288,22 @@
                     </div>
 
                     <div class="projects__content">
-                        <h3 class="projects__subtitle">App</h3>
-                        <h2 class="projects__title">Quiz App</h2>
+                        <h3 class="projects__subtitle" id="projects__subtitle2">App</h3>
+                        <h2 class="projects__title" id="projects__title2">Quiz App</h2>
 
-                        <p class="projects__description">
-                            Project that you carry out in the design 
-                            and structure of the layout, showing the 
-                            design at the client's request.
+                        <p class="projects__description" id="projects__description2">
+                            Projeto que você realiza na concepção e estrutura do layout,
+                            apresentando o desenho a pedido do cliente.
                         </p>
                     </div>
 
                     <div class="projects__buttons">
-                        <a href="#" target="_blank" class="projects__link">
+                        <a href="#" target="_blank" class="projects__link" id="projects__link3">
                             <i class="ri-github-line"></i> 
                             Visualizar
                         </a>
 
-                        <a href="#" target="_blank" class="projects__link">
+                        <a href="#" target="_blank" class="projects__link" id="projects__link4">
                             <i class="ri-dribbble-line"></i>
                             Visualizar
                         </a>
@@ -321,23 +320,22 @@
                     </div>
 
                     <div class="projects__content">
-                        <h3 class="projects__subtitle">Website</h3>
-                        <h2 class="projects__title">Site Manicure</h2>
+                        <h3 class="projects__subtitle" id="projects__subtitle3">Website</h3>
+                        <h2 class="projects__title" id="projects__title3">Site Manicure</h2>
 
-                        <p class="projects__description">
-                            Project that you carry out in the design 
-                            and structure of the layout, showing the 
-                            design at the client's request.
+                        <p class="projects__description" id="projects__description3">
+                            Projeto que você realiza na concepção e estrutura do layout,
+                            apresentando o desenho a pedido do cliente.
                         </p>
                     </div>
 
                     <div class="projects__buttons">
-                        <a href="#" target="_blank" class="projects__link">
+                        <a href="#" target="_blank" class="projects__link" id="projects__link5">
                             <i class="ri-github-line"></i> 
                             Visualizar
                         </a>
 
-                        <a href="#" target="_blank" class="projects__link">
+                        <a href="#" target="_blank" class="projects__link" id="projects__link6">
                             <i class="ri-dribbble-line"></i>
                             Visualizar
                         </a>
@@ -354,23 +352,22 @@
                     </div>
 
                     <div class="projects__content">
-                        <h3 class="projects__subtitle">App</h3>
-                        <h2 class="projects__title">IMC App</h2>
+                        <h3 class="projects__subtitle" id="projects__subtitle4">App</h3>
+                        <h2 class="projects__title" id="projects__title4">IMC App</h2>
 
-                        <p class="projects__description">
-                            Project that you carry out in the design 
-                            and structure of the layout, showing the 
-                            design at the client's request.
+                        <p class="projects__description" id="projects__description4">
+                            Projeto que você realiza na concepção e estrutura do layout,
+                            apresentando o desenho a pedido do cliente.
                         </p>
                     </div>
 
                     <div class="projects__buttons">
-                        <a href="#" target="_blank" class="projects__link">
+                        <a href="#" target="_blank" class="projects__link" id="projects__link7">
                             <i class="ri-github-line"></i> 
                             Visualizar
                         </a>
 
-                        <a href="#" target="_blank" class="projects__link">
+                        <a href="#" target="_blank" class="projects__link" id="projects__link8">
                             <i class="ri-dribbble-line"></i>
                             Visualizar
                         </a>
@@ -383,16 +380,16 @@
          <section class="contact section" id="contato">
             <div class="contact__container grid">
                 <div class="contact__data">
-                    <h2 class="section__title-2">
+                    <h2 class="section__title-2" id="section__titlecontato">
                         <span>Contate-me.</span>
                     </h2>
 
-                    <p class="contact__description-1">
+                    <p class="contact__description-1" id="contact__descriptioncontato">
                         Lerei todos os e-mails. Envie-me qualquer mensagem
                         que entrarei em contato com você.
                     </p>
 
-                    <p class="contact__description-2">
+                    <p class="contact__description-2" id="contact__descriptioncontato2">
                         Preciso do seu <b>Nome</b> e <b>Endereço de E-mail</b>,
                         mas você não receberá nada além da sua resposta.
                     </p>
@@ -401,28 +398,28 @@
                 </div>
 
                 <div class="contact__mail">
-                    <h2 class="contact__title">
-                        Me mande uma mensagem!
+                    <h2 class="contact__title" id="contact__title">
+                        Me Mande Uma Mensagem!
                     </h2>
 
                     <form action="" class="contact__form" id="contact-form">
                         <div class="contact__group">
-                            <div class="contact__box">
+                            <div class="contact__box" id="contact__label1">
                                 <input type="text" name="user_name" class="contact__input" id="name" required placeholder="Primeiro Nome">
                                 <label for="name" class="contact__label">Primeiro Nome</label>
                             </div>
 
-                            <div class="contact__box">
+                            <div class="contact__box" id="contact__label2">
                                 <input type="email" name="user_email" class="contact__input" id="email" required placeholder="Endereço de Email">
                                 <label for="email" class="contact__label">Endereço de Email</label>
                             </div>
 
-                            <div class="contact__box">
+                            <div class="contact__box" id="contact__label3">
                                 <input type="text" name="user_subject" class="contact__input" id="subject" required placeholder="Assunto">
                                 <label for="subject" class="contact__label">Assunto</label>
                             </div>
 
-                            <div class="contact__box contact__area">
+                            <div class="contact__box contact__area" id="contact__label4">
                                 <textarea name="user_message" id="message" class="contact__input" required placeholder="Mensagem"></textarea>
                                 <label for="message" class="contact__label">Mensagem</label>
                             </div>
@@ -430,7 +427,7 @@
 
                         <p class="contact__message" id="contact-message"></p>
 
-                        <button type="submit" class="contact__button button">
+                        <button type="submit" class="contact__button button" id="contact__button2">
                             <i class="ri-send-plane-line"></i> Enviar Mensagem
                         </button>
                     </form>
@@ -441,11 +438,11 @@
 
                     <div class="contact__social-data">
                         <div>
-                            <p class="contact__social-description-1">
+                            <p class="contact__social-description-1" id="contact__social1">
                                 Ou
                             </p>
 
-                            <p class="contact__social-description-2">
+                            <p class="contact__social-description-2" id="contact__social2">
                                 Escreva-me nas minhas redes sociais
                             </p>
                         </div>
@@ -474,19 +471,19 @@
          <div class="footer__container container grid">
             <ul class="footer__links">
                 <li>
-                    <a href="#sobre" class="footer__link">Sobre Mim</a>
+                    <a href="#sobre" class="footer__link" id="footer__link1">Sobre Mim</a>
                 </li>
 
                 <li>
-                    <a href="#servicos" class="footer__link">Serviços</a>
+                    <a href="#servicos" class="footer__link" id="footer__link2">Serviços</a>
                 </li>
 
                 <li>
-                    <a href="#projetos" class="footer__link">Projetos</a>
+                    <a href="#projetos" class="footer__link" id="footer__link3">Projetos</a>
                 </li>
             </ul>
 
-            <span class="footer__copy">
+            <span class="footer__copy" id="footer__copy">
                 &#169; Todos os direitos reservados por 
                 <a href="https://github.com/NotedSilva" target="_blank">NotedSilva.</a>
             </span>
