Melhoria de estrutura do código

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
 
-            <select id="languageSelector">
+            <select class="languageSelector" id="languageSelector">
                 <option value="pt-br">Português (BR)</option>
                 <option value="en">English (EUA)</option>
                 <option value="es">Español (ES)</option>
@@ -273,7 +273,7 @@
 
                         <a href="#" target="_blank" class="projects__link" id="projects__link2">
                             <i class="ri-dribbble-line"></i>
-                            Visualizar
+                            Deploy
                         </a>
                     </div>
                 </article>
@@ -305,7 +305,7 @@
 
                         <a href="#" target="_blank" class="projects__link" id="projects__link4">
                             <i class="ri-dribbble-line"></i>
-                            Visualizar
+                            Deploy
                         </a>
                     </div>
                 </article>
@@ -337,7 +337,7 @@
 
                         <a href="#" target="_blank" class="projects__link" id="projects__link6">
                             <i class="ri-dribbble-line"></i>
-                            Visualizar
+                            Deploy
                         </a>
                     </div>
                 </article>
@@ -369,7 +369,7 @@
 
                         <a href="#" target="_blank" class="projects__link" id="projects__link8">
                             <i class="ri-dribbble-line"></i>
-                            Visualizar
+                            Deploy
                         </a>
                     </div>
                 </article>
