Criação da area de skill e melhoria da estrutura geral do código

--- a/index.html
+++ b/index.html
@@ -157,10 +157,74 @@
 
                     <ul class="about__list" id="about__list">
                         <li class="about__item">
-                            <b>Minhas habilidades são:</b> HTML, CSS, JavaScript, 
-                            React, Git e GitHub, Bootstrap, Flutter e
-                            Figma.
+                            <b>Minhas principais habilidades são:</b>
                         </li>
+                        <div class="skills__info">
+                            <div class="skills__data">
+                                <div class="skills__blob">
+                                    <img src="/assets/img/css-3.svg" alt="Skills image">
+                                </div>
+                                <h3 class="skills__name">CSS</h3>
+                                <span class="skills__subtitle">Intermediário</span>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__blob">
+                                    <img src="/assets/img/html-1.svg" alt="Skills image">
+                                </div>
+                                <h3 class="skills__name">HTML</h3>
+                                <span class="skills__subtitle">Avançado</span>
+                            </div>
+                        
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="/assets/img/git-icon.svg" alt="Skills image">
+                            </div>
+                            <h3 class="skills__name">GIT</h3>
+                            <span class="skills__subtitle">Intermediário</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="/assets/img/logo-javascript.svg" alt="Skills image">
+                            </div>
+                            <h3 class="skills__name">JAVASCRIPT</h3>
+                            <span class="skills__subtitle">Intermediário</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="/assets/img/react-2.svg" alt="Skills image">
+                            </div>
+                            <h3 class="skills__name">REACT</h3>
+                            <span class="skills__subtitle">Básico</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="/assets/img/python-5.svg" alt="Skills image">
+                            </div>
+                            <h3 class="skills__name">PYTHON</h3>
+                            <span class="skills__subtitle">Básico</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="/assets/img/github-icon-2.svg" alt="Skills image">
+                            </div>
+                            <h3 class="skills__name">GITHUB</h3>
+                            <span class="skills__subtitle">Intermediário</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="/assets/img/mysql-logo.svg" alt="Skills image">
+                            </div>
+                            <h3 class="skills__name">MY SQL</h3>
+                            <span class="skills__subtitle">Intermediário</span>
+                        </div>
+                    </div>
                     </ul>
 
                     <div class="about__buttons">
